@@ -12,7 +12,7 @@ import org.junit.jupiter.api.Test;
 import javax.xml.parsers.DocumentBuilderFactory;
 
 import java.io.ByteArrayInputStream;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -32,7 +32,7 @@ class SamlCompliantLogoutMessageCreatorTests {
     void verifyMessageBuilding() throws Exception {
 
         val service = RegisteredServiceTestUtils.getService(TEST_URL);
-        val logoutUrl = new URL(service.getOriginalUrl());
+        val logoutUrl = new URI(service.getOriginalUrl()).toURL();
         val request = DefaultSingleLogoutRequestContext.builder()
             .ticketId("TICKET-ID")
             .service(service)
